des157 portal page

--- a/des157/index.html
+++ b/des157/index.html
@@ -2,13 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DES157 Portal Page</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-    <h1>This is the portal page for DES 157</h1>
 
-    <p>Everything we do for this class is going to go in this des157 folder.</p>
-    <p>We will link all our project and assignments on this portal page.</p>
+<body>
+    <header>
+      <h1>Hannah Moon</h1>
+      <h2 id="h">DES 157 - Interactive Media II - Spring 2021</h2>
+      <div id="banner">
+        <div id="b1"></div>
+        <div id="b2"></div>
+        <div id="b3"></div>
+        <div id="b4"></div>
+        <div id="b5"></div>
+    </div>
+    </header>
+<main>
+  <section>
+  <section id="studios">
+      <h2>Studios</h2>
+      <ol>
+          <li><a href="#">Mad Libs 2.0</a></li>
+          <li><a href="#">Every Picture</a></li>
+          <li><a href="#">Game On!</a></li>
+      </ol>
+  </section>
+
+  <section id="experiments">
+      <h2>Experiments</h2>
+      <ul>
+          <li><a href="#">Exp 1</a></li>
+      </ul>  
+  </section>
+  
+  <section id="writing">
+    <h2>Writing</h2>
+    <ol>
+        <li><a href="#">Learning Jourmal</a></li>
+    </ol>
+  </section>
+</section>
+
+<section id="rd">
+  <h2>Research & Development</h2>
+  <ol>
+      <li><a href="#">Project Brief</a></li>
+      <li><a href="#">Digital Comp</a></li>
+      <li><a href="#">Refined Comp</a></li>
+      <li><a href="#">Prototype 1</a></li>
+      <li><a href="#">User Test</a></li>
+      <li><a href="#">User Test Results</a></li>
+  </ol>
+</section>
+
+<section id="final">
+  <h2>Final</h2>
+  <ol>
+      <li><a href="#">Final Project</a></li>
+  </ol>
+</section>
+
+</main>
+<footer>
+  <p><a href="mailto:&#104;&#107;&#109;&#111;&#111;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email me</a></p>
+    <p><a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> </p> 
+    <p><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a></p>
+  
+</footer>
+
 </body>
 </html>
