--- a/des157/index.html
+++ b/des157/index.html
@@ -35,7 +35,7 @@
   <section id="experiments">
       <h2>Experiments</h2>
       <ul>
-          <li><a href="#">Exp 1</a></li>
+          <li><a href="exp1">Exp 1</a></li>
       </ul>  
   </section>
   
