learning journal folder new

--- a/des157/index.html
+++ b/des157/index.html
@@ -42,7 +42,7 @@
   <section id="writing">
     <h2>Writing</h2>
     <ol>
-        <li><a href="#">Learning Jourmal</a></li>
+        <li><a href="lj/index.html">Learning Jourmal</a></li>
     </ol>
   </section>
 </section>
