--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -11,6 +11,13 @@
   <header> 
     <h1>Hannah Moon's Learning Journals</h1>
   </header>
+  <div>
+    <article>
+      <h2>"Best Practices for Modals / Overlays / Dialog Windows"</h2>
+      <h3>April 22, 2021</h3>
+      <p>Before coming across the article,<a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c
+        ">“Best Practices for Modals / Overlays / Dialog Windows”</a> by Naema Baskanderi,  I was very unfamiliar with the term “modal”.  After reading this article, I now understand what it is. It’s interesting to realize how commonly I have actually come across a modal window when browsing the internet, but did not know the term for the pop-up window itself.</p> <p>The most recent modal I have interacted with that I can remember was when visiting an online clothing store website where the moment you enter the site, it pops up. In this case, it definitely grabbed my attention. I remember seeing many of the elements mentioned in the article on the modal window I encountered. The background was darkened to bring more emphasis to the window. There was the x mark on the right upper corner. There was a button and it was centered on the screen in a reasonable size. It showed me a coupon of getting 15% if you sign up for a program. In this case, I was interested and signed up, but many times when visiting an article to read certain news, I automatically closed the modal because I did not ask for it and it appeared abruptly. </p><p>I definitely think the manner in which the modal window pops up affects whether or not the user will read what it says.</p>
+    </article>
     
     <article>
       <h2>"Best Practices of Form Design" Response</h2>
@@ -25,5 +32,6 @@
       </div>
 
     </article>
+  </div>
 </body>
 </html>
