--- a/des157/madlibs/madlibs.html
+++ b/des157/madlibs/madlibs.html
@@ -32,13 +32,13 @@
           <label for="verb">Verb</label>
           <input type="text" id="verb" required>
        
-          <label for="adj">Adjective</label>
+          <label for="adj1">Adjective</label>
           <input type="text" id="adj1" required>
           
-          <label for="adj">Adjective</label>
+          <label for="adj2">Adjective</label>
           <input type="text" id="adj2">
 
-          <label for="adj">Adjective</label>
+          <label for="adj3">Adjective</label>
           <input type="text" id="adj3">
 
           <label for="beverage">Beverage</label>
