--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -13,6 +13,12 @@
   </header>
   <div>
     <article>
+      <h2>Visual Thinking</h2>
+      <h3>April 29, 2021</h3>
+      <p>After scrolling through the website called <a href="https://www.awwwards.com/">Awwwards</a>, I came across <a href="https://tympanus.net/Development/PreviewContentTransition/">Preview to Content Transition</a>. It was a visually appealing and elegant looking website. The light forest green color of the page was easy on the eyes and matched the mood of the photos that the page displayed. The photography seemed professional and showed portraits of models with fancy and classy outfits. I particularly enjoyed the subtle interactivity of the page. The mouse is shown as a simple open circle that specifically interacts with the larger open circles next to the photos. When the user hovers over it,the movement that is activated has the titles disappear and slide which is interesting. The open circle theme fit perfectly with the visuals and was a clever way to make the interactivity a bit unique. The font choice really matched and contributed to the aesthetic feel of the page.</p>
+      </p>
+    </article>
+    <article>
       <h2>"Best Practices for Modals / Overlays / Dialog Windows"</h2>
       <h3>April 22, 2021</h3>
       <p>Before coming across the article,<a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c
@@ -33,5 +39,10 @@
 
     </article>
   </div>
+  <footer>
+    <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/lj/index.html">ValidHTML</a>
+   <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+  </footer>
+
 </body>
 </html>
