--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <link href="styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Khand:wght@300&family=Special+Elite&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning Journals</title>
 </head>
@@ -12,6 +16,25 @@
     <h1>Hannah Moon's Learning Journals</h1>
   </header>
   <div>
+    <article>
+      <h2>Every Picture</h2>
+      <h3>May 5, 2021</h3>
+      <h2 id='part'>Part 1</h2>
+      <figure>
+        <img src="cat.jpeg" alt="cat" style="width:100%">
+        <figcaption>Hannah Moon 2020</figcaption>
+      </figure>
+      <p>This is a photo I took of a cat that lives in my neighborhood. I specifically like this photo because of the high quality. You can see the little details of the cat’s fur and like its green-yellow eyes which stand out. This image relates to my topic of my cat photo collection. I took my first photography class(DES113) last quarter and I did not have many people to photograph for the portrait assignment. However, I had a lot of subjects(cats) in my neighborhood that could pose for me. I was able to experiment and try to take pictures of these cats, hoping they wouldn’t run off. My collection is able to express my love for cats. I used to be quite scared of cats in the past, but have grown to like them after seeing them constantly in the neighborhood. I think due to this change in attitude towards cats, they are more important to me. Also, I found an interest in photography so it can showcase some of my favorite photos. 
+      </p>
+      <h2 id='part'>Part 2</h2>
+      <figure>
+        <img src="bowl.jpg" alt="bowl" style="width:100%">
+        <figcaption>Kajal 2020</figcaption>
+      </figure>
+      <p>This photo shows an upward view of a marble bowl with some interesting carvings of symbols or writing that I am personally not familiar with. It reminds me of ancient Egypt hieroglyphics carved into stone or wood due to the symbols carved in between two lines that serve as  a column. In this bowl, the symbols are carved in a circle in rows and the middle has a symbol that looks like a face. I think that the marble is very beautiful and the designs around the corners make the pottery piece unique and decorative. This image could  probably be an important collection of  Kajal’s pottery. It could also be something to do with Kajal’s culture. I wonder what  writing and symbols on the bowl mean and that would be a mysterious aspect of this image.
+      </p>
+    </article>
+  
     <article>
       <h2>Visual Thinking</h2>
       <h3>April 29, 2021</h3>
@@ -34,7 +57,7 @@
       <p>An example of a website that demonstrates good practices is Pinterest becuase it is easy to maneuver and straightforward.</p>
       <div id ="s">
         <p><a href="https://www.pinterest.com/">Pinterest</a> </p> 
-      </div>
+     
 
     </article>
   </div>
