--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -19,14 +19,14 @@
     <article>
       <h2>Every Picture</h2>
       <h3>May 5, 2021</h3>
-      <h2 id='part'>Part 1</h2>
+      <h2 id="part">Part 1</h2>
       <figure>
         <img src="cat.jpeg" alt="cat" style="width:100%">
         <figcaption>Hannah Moon 2020</figcaption>
       </figure>
       <p>This is a photo I took of a cat that lives in my neighborhood. I specifically like this photo because of the high quality. You can see the little details of the cat’s fur and like its green-yellow eyes which stand out. This image relates to my topic of my cat photo collection. I took my first photography class(DES113) last quarter and I did not have many people to photograph for the portrait assignment. However, I had a lot of subjects(cats) in my neighborhood that could pose for me. I was able to experiment and try to take pictures of these cats, hoping they wouldn’t run off. My collection is able to express my love for cats. I used to be quite scared of cats in the past, but have grown to like them after seeing them constantly in the neighborhood. I think due to this change in attitude towards cats, they are more important to me. Also, I found an interest in photography so it can showcase some of my favorite photos. 
       </p>
-      <h2 id='part'>Part 2</h2>
+      <h2 id="part2">Part 2</h2>
       <figure>
         <img src="bowl.jpg" alt="bowl" style="width:100%">
         <figcaption>Kajal 2020</figcaption>
@@ -55,12 +55,10 @@
       <p>Also, I have seen both examples of the placeholder text that the article shows, and I definitely agree that the second option is much better. I appreciate when the e.g. doesn’t go away while typing because sometimes I forget what I am typing while typing. I thought it was interesting how the article did not recommend the red asterisk mark for the mandatory options. I have seen this in many of the online forms I had to complete and I was fine with it.</p> <p>Another practice of the form feedback is such a key part in the process for me personally. I always like to get some sort of message that confirms that I successfully completed the form. It gives me a sense of accomplishment and ease.
       </p>
       <p>An example of a website that demonstrates good practices is Pinterest becuase it is easy to maneuver and straightforward.</p>
-      <div id ="s">
-        <p><a href="https://www.pinterest.com/">Pinterest</a> </p> 
-     
-
-    </article>
+        <p><a href="https://www.pinterest.com/">Pinterest</a></p> 
+     </article>
   </div>
+
   <footer>
     <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/lj/index.html">ValidHTML</a>
    <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
