--- a/des157/index.html
+++ b/des157/index.html
@@ -26,7 +26,7 @@
   <section id="studios">
       <h2>Studios</h2>
       <ol>
-          <li><a href="madlibs/madlibs.html">Mad Libs 2.0</a></li>
+          <li><a href="studio1/index.html">Mad Libs 2.0</a></li>
           <li><a href="studio2/index.html">Every Picture</a></li>
           <li><a href="#">Game On!</a></li>
       </ol>
