--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -10,61 +10,127 @@
 <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300&family=Special+Elite&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <script src="script.js" defer></script> 
 </head>
 <body>
     <h1>MEET MY NEIGHBORHOOD FRIENDS</h1>
-    <div class="mainly">
-    <div class="box1">
-        <img src="images/bluemysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
+<div class="mainly">
+<div class="box">
+    <img src="images/yellowmysterycat.jpg" class="open" id="one" alt="mysterycat" width=200>
   </div>
-  <div class="box1">
-    <img src="images/coralmysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
-    <p><a href="#" class="open" id ="one">Click here</a></p>
+<div class="box">
+    <img src="images/coralmysterycat.jpg" class="open" id="two" alt="mysterycat" width=200>
 </div>
-<div class="box1">
-  <img src="images/greenmysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
+<div class="box">
+  <img src="images/purplemysterycat.jpg" class="open" id="three" alt="mysterycat" width=200>
 </div>
-<div class="box1">
-  <img src="images/orangemysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
+<div class="box">
+  <img src="images/orangemysterycat.jpg" class="open" id="four" alt="mysterycat" width=200>
 </div>
-<div class="box1">
-  <img src="images/pinkmysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
+<div class="box">
+  <img src="images/greenmysterycat.jpg" class="open" id="five" alt="mysterycat" width=200>
 </div>
-<div class="box1">
-  <img src="images/skymysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
-</div>
-<div class="box1">
-  <img src="images/yellowmysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
-</div>
-<div class="box1">
-  <img src="images/purplemysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
-</div>
-<div class="box1">
-  <img src="images/babymysterycat.jpg" class="open img" id="mystery1" alt="Default Image" width=150>
+<div class="box">
+  <img src="images/skymysterycat.jpg" class="open" id="six" alt="mysterycat" width=200>
 </div>
 </div>
     
       
     <footer>
-      <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/madlibs/madlibs.html">ValidHTML</a>
+      <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/madlibs/madlibs.html">Valid HTML</a>
      <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
     </footer>
 
 
-  </main>
-  <section id="ol-one" class="overlay hidden">
+<section id="ol-one" class="overlay hidden">
     <article>
-        <img src="images/cat.jpeg" alt="cat1" width=70%>
-        <p>This is Snowflake!</p>
-        <button class="close">close</button>
+        <img src="photos/eyelinercat.jpg" alt="cat" width=70%>
+        <h3>PANDA</h3>
+        <ul>
+        <li>Look like it has eyeliner on</li>
+        <li>Emerald green eyes</li>
+        <li>Friendly</li>
+      </ul>
+        <button class="close" id="exit">close</button>
         <button class="corner close">&otimes;</button>
-
-    </article>
+    </article>  
 </section>
 
-  
+<section id="ol-two" class="overlay hidden">
+  <article>
+      <img src="photos/chubscat.JPG" alt="cat" width=70%>
+      <h3>CHUBS</h3>
+      <ul>
+        <li>Favorite activity is sleeping</li>
+        <li>Usually hangs out near the swimming pool</li>
+        <li>A bit shy with strangers</li>
+      </ul>
+      <button class="close" id="exit">close</button>
+      <button class="corner close">&otimes;</button> 
+  </article>
+</section>
 
+<section id="ol-three" class="overlay hidden">
+  <article>
+      <img src="photos/calicocat1.jpg" alt="cat" id="myCalico" width=70%>
+      <h3>Princess</h3>
+      <ul>
+        <li>Calico cat</li>
+        <li>Likes to walk around the outer edges of the neighborhood</li>
+        <li>Elegant yellow-green eyes</li>
+        <li>Enjoys playing in the grass</li>
+      </ul>
+      <button class="close" id="exit">close</button>
+      <button class="corner close">&otimes;</button> 
+      <button id="previous">previous</button> 
+      <button id="next">next</button>              
+  </article>
+</section>
+
+<section id="ol-four" class="overlay hidden">
+  <article>
+      <img src="photos/grayfluffycat.JPG" alt="cat" width=70%>
+      <h3>Thunder</h3>
+      <ul>
+        <li>Gray and fluffy</li>
+        <li>Fierce yellow eyes</li>
+        <li>Likes to hang around the office area</li>
+      </ul>
+      <button class="close" id="exit">close</button>
+      <button class="corner close">&otimes;</button>
+  </article>
+</section>
+
+<section id="ol-five" class="overlay hidden">
+  <article>
+      <img src="photos/orangecat.jpg" alt="cat" width=70%>
+      <h3>Honey</h3>
+      <ul>
+        <li>The one and only orange cat that lives here</li>
+        <li>Likes to climb up to the carport</li>
+        <li>likes to roam in the bushes</li>
+        <li>Adventurous and fun</li>
+      </ul>
+      <button class="close" id="exit">close</button>
+      <button class="corner close">&otimes;</button>
+  </article>
+</section>
+
+<section id="ol-six" class="overlay hidden">
+  <article>
+      <img src="photos/cat.jpeg" alt="cat" width=70%>
+      <h3>Snowflake</h3>
+      <ul>
+        <li>Likes to walk in the parking lot</li>
+        <li>Calm and quiet</li>
+        <li>Likes the chilly morning weather</li>
+      </ul>
+      <button class="close" id="exit">close</button>
+      <button class="corner close">&otimes;</button>
+  </article>
+</section>
 
 </body>
 </html>
