--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" defer></script>
-  <title>Build a Mad Lib Script</title>
+  <title>Every Picture</title>
   <link href="styles.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
@@ -16,6 +16,7 @@
 </head>
 <body>
     <h1>MEET MY NEIGHBORHOOD FRIENDS</h1>
+    
 <div class="mainly">
 <div class="box">
     <img src="images/yellowmysterycat.jpg" class="open" id="one" alt="mysterycat" width=200>
