--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -55,7 +55,7 @@
       <article id="madlib" class="overlay hidden">
       </article>
     <footer>
-      <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/madlibs/madlibs.html">ValidHTML</a>
+      <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/studio1/index.html">ValidHTML</a>
      <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
     </footer>
 
