--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -40,7 +40,7 @@
     
       
     <footer>
-      <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/madlibs/madlibs.html">Valid HTML</a>
+      <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/studio2/index.html">Valid HTML</a>
      <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
     </footer>
 
