--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -47,35 +47,35 @@
 
 <section id="ol-one" class="overlay hidden">
     <article>
-        <img src="photos/eyelinercat.jpg" alt="cat" width=70%>
+        <img src="photos/eyelinercat.jpg" alt="cat" width=700>
         <h3>PANDA</h3>
         <ul>
         <li>Look like it has eyeliner on</li>
         <li>Emerald green eyes</li>
         <li>Friendly</li>
       </ul>
-        <button class="close" id="exit">close</button>
+        <button class="close" id="exit1">close</button>
         <button class="corner close">&otimes;</button>
     </article>  
 </section>
 
 <section id="ol-two" class="overlay hidden">
   <article>
-      <img src="photos/chubscat.JPG" alt="cat" width=70%>
+      <img src="photos/chubscat.JPG" alt="cat" width=800>
       <h3>CHUBS</h3>
       <ul>
         <li>Favorite activity is sleeping</li>
         <li>Usually hangs out near the swimming pool</li>
         <li>A bit shy with strangers</li>
       </ul>
-      <button class="close" id="exit">close</button>
+      <button class="close" id="exit2">close</button>
       <button class="corner close">&otimes;</button> 
   </article>
 </section>
 
 <section id="ol-three" class="overlay hidden">
   <article>
-      <img src="photos/calicocat1.jpg" alt="cat" id="myCalico" width=70%>
+      <img src="photos/calicocat1.jpg" alt="cat" id="myCalico" width=700>
       <h3>Princess</h3>
       <ul>
         <li>Calico cat</li>
@@ -83,7 +83,7 @@
         <li>Elegant yellow-green eyes</li>
         <li>Enjoys playing in the grass</li>
       </ul>
-      <button class="close" id="exit">close</button>
+      <button class="close" id="exit3">close</button>
       <button class="corner close">&otimes;</button> 
       <button id="previous">previous</button> 
       <button id="next">next</button>              
@@ -92,21 +92,21 @@
 
 <section id="ol-four" class="overlay hidden">
   <article>
-      <img src="photos/grayfluffycat.JPG" alt="cat" width=70%>
+      <img src="photos/grayfluffycat.JPG" alt="cat" width=700>
       <h3>Thunder</h3>
       <ul>
         <li>Gray and fluffy</li>
         <li>Fierce yellow eyes</li>
         <li>Likes to hang around the office area</li>
       </ul>
-      <button class="close" id="exit">close</button>
+      <button class="close" id="exit4">close</button>
       <button class="corner close">&otimes;</button>
   </article>
 </section>
 
 <section id="ol-five" class="overlay hidden">
   <article>
-      <img src="photos/orangecat.jpg" alt="cat" width=70%>
+      <img src="photos/orangecat.jpg" alt="cat" width=700>
       <h3>Honey</h3>
       <ul>
         <li>The one and only orange cat that lives here</li>
@@ -114,21 +114,21 @@
         <li>likes to roam in the bushes</li>
         <li>Adventurous and fun</li>
       </ul>
-      <button class="close" id="exit">close</button>
+      <button class="close" id="exit5">close</button>
       <button class="corner close">&otimes;</button>
   </article>
 </section>
 
 <section id="ol-six" class="overlay hidden">
   <article>
-      <img src="photos/cat.jpeg" alt="cat" width=70%>
+      <img src="photos/cat.jpeg" alt="cat" width=700>
       <h3>Snowflake</h3>
       <ul>
         <li>Likes to walk in the parking lot</li>
         <li>Calm and quiet</li>
         <li>Likes the chilly morning weather</li>
       </ul>
-      <button class="close" id="exit">close</button>
+      <button class="close" id="exit6">close</button>
       <button class="corner close">&otimes;</button>
   </article>
 </section>
