--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -50,9 +50,10 @@
         <img src="photos/eyelinercat.jpg" alt="cat" width=700>
         <h3>PANDA</h3>
         <ul>
-        <li>Look like it has eyeliner on</li>
+        <li>Eyeliner eyes</li>
         <li>Emerald green eyes</li>
         <li>Friendly</li>
+        <li>Likes to walk on the sidewalks</li>
       </ul>
         <button class="close" id="exit1">close</button>
         <button class="corner close">&otimes;</button>
