--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -16,6 +16,14 @@
     <h1>Hannah Moon's Learning Journals</h1>
   </header>
   <div>
+
+    <article>
+      <h2>Game Design UX Best Practices</h2>
+      <h3>May 18, 2021</h3>
+      <p>After reading this article <a href="https://uxplanet.org/game-design-ux-best-practices-guide-4a3078c32099">UX Planet</a>, it reminded me of how important human-centered design is and how the designer must put themselves in the user’s perspective. When I am playing an online game app, I have never stopped to think about all these little details. After reading about the specifics, it has really been eye-opening. I thought it was so interesting that UI designers create the monetization aspects like the store button and more apps in the comfort zone which is where the user would most easily press. The sliders for extra content is such a common thing I see in games, and I think it is such an effective way to add extra content without navigating away from the main screen. Rewarded ad videos are also such a great idea for games. I have been a user who would watch the ads for extra coins and prizes. Something new I learned was about the dragging objects in games and the importance of the anchor point location to make it easier to drag and more user-friendly. 
+      </p>
+    </article>
+
     <article>
       <h2>Every Picture</h2>
       <h3>May 5, 2021</h3>
