--- a/des157/index.html
+++ b/des157/index.html
@@ -51,7 +51,7 @@
 <section id="rd">
   <h2>Research & Development</h2>
   <ol>
-      <li><a href="#">Project Brief</a></li>
+      <li><a href="final/brief.html">Project Brief</a></li>
       <li><a href="#">Digital Comp</a></li>
       <li><a href="#">Refined Comp</a></li>
       <li><a href="#">Prototype 1</a></li>
