--- a/des157/final/brief.html
+++ b/des157/final/brief.html
@@ -12,15 +12,21 @@
 <p>My final project will be updating and improving upon the “Every Picture” studio project. My page is where I can showcase photos of the many different cats that live in my neighborhood. I will fix the image sizing issues mentioned in my feedback as well as change the hovering element. I will add more interactive and visual elements to my page so that it is more engaging than the previous submitted page.</p>
 <h3>Comparison Project 1</h3>
 <a href="https://www.wildsouls.gr/en">
+  <figure>
   <img src="wildsouls.png" alt="wildsouls" style="width:100%">
+  <figcaption>Wild Souls</figcaption>
 </a>
-<figcaption>Wild Souls</figcaption>
+</figure>
+
 <p>This webpage displays all different flavors and choices of butter. The website is very colorful, visually pleasing, and has a lot of interactive elements. When the page opens, I see the main logo, message, and the products which are the jars of butter. The background in which these elements are shown is very artistic and incorporates shadows which makes it look more deep and real. In order to navigate through the site, the user has to scroll down and click on the images of the product. There are automatic slideshows where each of the product images slowly move to the left. As you scroll down, a new section of the page appears and images pop up onto the screen one by one. When I hover over the product image, the background changes color to have patterns and the cursor changes into an eye. One thing that could be improved is the automatic slideshow which only moves when the user’s mouse is on the very top or bottom edge of the page. This was a little confusing for me at first because it moves automatically but then stops, so I did not know how I could see the other products.</p>
 <h3>Comparison Project 2</h3>
 <a href="https://rankin.co.uk/">
+  <figure>
   <img src="rankin.png" alt="rankin" style="width:100%">
+  <figcaption>Rankin</figcaption>
 </a>
-<figcaption>Rankin</figcaption>
+</figure>
+
 <p>This is an example of a website that showcases professional photography. I thought that the animated words right when you open the page was really cool. This page is also navigated through with scrolling. As I scrolled down the page, a new image would show up which would span the entire width of the page. The first reels image would move when I hovered over it and it would have a “see more” which I could click to see more images. One thing I noticed is that this website would take a lot of time to load. When I clicked the see more button, it took over 4 seconds to load. I am assuming this is because the photos and videos are very high quality. </p>
 <h3>Project Goals</h3>
 <p>I hope to be able to improve my webpage so that it can share some of the interactive elements that I saw in the two comparison websites I talked about above. I am planning to maybe have something more interesting happen when I hover over the mystery cat images. I could have a message that pops up on the side that says “meow” or “hi” and the image can not only change size but also change colors. I could possibly add a more dynamic background like “wildsouls” website. I would like to add an automatic slideshow interactive element for the specific cats I have more images of. I originally had one mystery cat that had two photos to display. For this one, I had a next and previous button to display them. Now I could add more photos and make it display the next photo every 2 seconds.  
@@ -34,10 +40,10 @@
 <h3>Experience Goals</h3>
 <p>I want the user experience for my webpage to be exciting and visually appealing. I want the users to be curious as to what is behind each of the mystery cat images or cards showcased on the main page. I hope that the visuals and interactive elements prompt them to hover over the cards and click on all six cards to see which cat is behind each question mark. By adding a possible introduction scrolling page, I hope to make the experience more dynamic and have an overall background setting change. The user experience should be very interactive rather than automatic, and the webpage to encourage the user to find and figure things out.
 </p>
-</body>
 <footer>
   <a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/final/brief.html">ValidHTML</a>
  <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
 </footer>
+</body>
 
 </html>
