--- a/des157/index.html
+++ b/des157/index.html
@@ -55,7 +55,7 @@
       <li><a href="final/images/comp.png">Digital Comp</a></li>
       <li><a href="final/images/revisedcomp.png">Refined Comp</a></li>
       <li><a href="final/proto/index.html">Prototype 1</a></li>
-      <li><a href="#">User Test</a></li>
+      <li><a href="final/usertest/index.html">User Test</a></li>
       <li><a href="#">User Test Results</a></li>
   </ol>
 </section>
