--- a/des157/studio3/index.html
+++ b/des157/studio3/index.html
@@ -30,17 +30,19 @@
     </div>
 
     <div id="game">
-      
     </div>
+
     <div id="actions">
     </div>
-    <div id="score"></div>
+
+    <div id="score">
     </div>
+
   <div id="container">
     <main>
       <section id="pig1-container">
         <div id="winner"></div>
-            <div class="pig1" id="pig1">
+            <div class="pig1">
               <img src="pig1.png" id="pig1" alt="pig1" width=200>
             </div>
             <h2>Pig 1 🐷</h2>
@@ -49,7 +51,7 @@
 
       <section id="pig2-container">
         <div id="winner2"></div>
-            <div class="pig2" id="pig2">
+            <div class="pig2">
               <img src="pig2.png" id="pig2" alt="pig2" width=200>
             </div>
             <h2>Pig 2 🐷</h2>
@@ -59,7 +61,7 @@
     </main>
 </div>
 <footer>
-    <p><a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a> </p> 
+    <p><a href="https://validator.w3.org/check?uri=https://hmoon99.github.io/des157/studio3/index.html">Valid HTML 5</a> </p> 
     <p><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a></p>
 </footer>
 
